--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "carono/yii2-giix",
-  "description": "Yii2 gii generator based on schmunk42/yii2-giiant",
+  "description": "Yii2 gii generator based on schmunk42 yii2-giiant",
   "type": "yii2 component",
   "license": "MIT",
   "authors": [
