--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "schmunk42/yii2-giiant": "^0.9.0"
+    "schmunk42/yii2-giiant": "@stable"
   },
   "autoload": {
     "psr-4": {
