--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require": {
     "schmunk42/yii2-giiant": "@stable",
     "nette/php-generator": "@stable",
-    "carono/yii2-widgets": "@stable"
+    "carono/codegen": "@stable"
   },
   "autoload": {
     "psr-4": {
