--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,9 @@
   "license": "MIT",
   "authors": [
     {
-      "name": "carno",
-      "email": "spamer2000@list.ru"
+      "name": "Aleksandr Kasyanov",
+      "email": "info@carono.ru",
+      "homepage": "http://carono.ru"
     }
   ],
   "require": {
