--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require": {
     "yiisoft/yii2": "~2.0",
     "nette/php-generator": "@stable",
-    "carono/codegen": "^0.0.5"
+    "carono/codegen": "~0.1"
   },
   "autoload": {
     "psr-4": {
